[gd_scene load_steps=7 format=2]

[ext_resource path="res://Level/Level.gd" type="Script" id=1]
[ext_resource path="res://mytiles.tres" type="TileSet" id=2]
[ext_resource path="res://Level/Arena.gd" type="Script" id=3]
[ext_resource path="res://Helpers/ArrayHelper.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sound/Victory.wav" type="AudioStream" id=6]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Arena" type="TileMap" parent="."]
editor/display_folded = true
tile_set = ExtResource( 2 )
cell_size = Vector2( 50, 50 )
collision_mask = 62
format = 1
script = ExtResource( 3 )

[node name="ArrayHelper" parent="Arena" instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( -587.251, -492.751 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.09375, 0.09375, 0.09375, 1 )

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="died" from="Player" to="." method="player_death"]
[connection signal="weapon_acquired" from="Player" to="." method="_on_weapon_acquired"]
[connection signal="weapon_thrown" from="Player" to="." method="_on_Player_weapon_thrown"]
